--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Docker
-        uses: docker/setup-action@v2
+        # uses: docker/setup-action@v2
+        uses: docker/build-push-action@v2
 
       - name: Login to Docker Hub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
